--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
     - docker build -t jussik200/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run jussik200/docker-react npm run test -- --coverage
+    - docker run -e CI=true jussik200/docker-react npm run test
